fixed button spacing

--- a/src/Components/KidsZone/KidZoneApp.css
+++ b/src/Components/KidsZone/KidZoneApp.css
@@ -7,4 +7,4 @@
     height: 40vh;
     background-size: cover;
  }
- body {padding: 20px}
+ .btn{margin:10px}
